--- a/styles.css
+++ b/styles.css
@@ -12,15 +12,16 @@
     --surface-color: rgba(255, 255, 255, 0.05);
     --surface-color-hover: rgba(255, 255, 255, 0.2);
     --switch-bg-url: url(./assets/moon-outline.svg);
+    --highlight-color: rgba(255, 255, 255, 0.5);
 }
 
 .light {
     --text-color: black;
     --bg-url: url(./assets/bg-mobile-light-green.jpg);
-    --stroke-color: rgba(0, 0, 0, 0.5);
     --surface-color: rgba(0, 0, 0, 0.05);
     --surface-color-hover: rgba(0, 0, 0, 0.2);
     --switch-bg-url: url(./assets/sunny-outline.svg);
+    --highlight-color: rgba(0, 0, 0, 0.5);
 }
 
 body {
@@ -69,11 +70,13 @@ body * {
     margin-top: 8px;
 }
 
-/* Switch *//* Toggle */
+/* Switch */
+/* Toggle */
 #switch {
     display: flex;
     justify-content: center;
 }
+
 .toggle {
     display: none;
 }
@@ -81,13 +84,17 @@ body * {
 .toggle+label {
     width: 64px;
     height: 26px;
-    background: var(--stroke-color);
+    background: var(--highlight-color);
     display: block;
     position: relative;
     border-radius: 20px;
     padding: 2px;
     transition: 200ms;
     cursor: pointer;
+}
+
+.toggle+label:hover {
+    outline: 8px solid var(--surface-color-hover);
 }
 
 .toggle+label:before {
